<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.gamerduck</groupId>
  <artifactId>lifesteal-parent</artifactId>
  <version>${revision}</version>
  <packaging>pom</packaging>
  <properties>
	  <maven.compiler.source>16</maven.compiler.source>
	  <maven.compiler.target>16</maven.compiler.target>
	  <revision>0.1.2-SNAPSHOT-TEST</revision>
  </properties>
  <modules>
	  <module>lifesteal-api</module>
	  <module>lifesteal-spigot</module>
  </modules>
  <repositories>
	  <repository>
	  	<id>spigot-repo</id>
	  	<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
	  </repository>
	  <repository>
	  	<id>papermc</id>
	  	<url>https://papermc.io/repo/repository/maven-public/</url>
	  </repository>
	  <repository>
	  	<id>jitpack.io</id>
	  	<url>https://jitpack.io</url>
	  </repository>
	<repository>
	    <id>CodeMC</id>
	    <url>https://repo.codemc.org/repository/maven-public/</url>
	</repository>
    <repository>
    	<id>placeholderapi</id>
		<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
	</repository>
  </repositories>
</project>